加入車牌偵測(half)

--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -125,6 +125,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="detection.cpp" />
+    <ClCompile Include="image_preprocess.cpp" />
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <ItemGroup>
